@@ -13,6 +13,7 @@
 	added flash9 bytearray serialization (to binary string, for neko com)
 	fixed Type.typeof on some flash9 instances
 	no more dontUseCache (haxe.Serializer.USE_CACHE, default to false)
+	small genxml/haxedoc improvements
 
 2007-01-01: 1.10
 	fix in haxe.remoting.SocketConnection.readAnswer
